<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/fond"
    tools:context=".DifficulteActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.Fullscreen.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.Fullscreen.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/facileButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="288dp"
            android:layout_height="73dp"
            android:layout_alignStart="@+id/image"
            android:layout_alignLeft="@+id/image"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="328dp"
            android:text="@string/facile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/moyenButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="288dp"
            android:layout_height="73dp"
            android:layout_alignStart="@+id/image"
            android:layout_alignLeft="@+id/image"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="232dp"
            android:text="@string/moyen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button

            android:id="@+id/difficileButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="288dp"
            android:layout_height="73dp"
            android:layout_alignStart="@+id/image"
            android:layout_alignLeft="@+id/image"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="140dp"
            android:text="@string/difficile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button

            android:id="@+id/ultraButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="288dp"
            android:layout_height="73dp"
            android:layout_alignStart="@+id/image"
            android:layout_alignLeft="@+id/image"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="44dp"
            android:text="@string/ultra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
